crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_interrupts_paragraph_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..37
  PARAGRAPH@0..4
    TEXT@0..3 "Foo"
    NEWLINE@3..4 "\n"
  LIST@4..10
    LIST_ITEM@4..10
      LIST_MARKER@4..5 "-"
      WHITESPACE@5..6 " "
      PLAIN@6..10
        TEXT@6..9 "bar"
        NEWLINE@9..10 "\n"
  BLANK_LINE@10..11
    BLANK_LINE@10..11 "\n"
  PARAGRAPH@11..15
    TEXT@11..14 "Baz"
    NEWLINE@14..15 "\n"
  LIST@15..22
    LIST_ITEM@15..22
      LIST_MARKER@15..17 "1."
      WHITESPACE@17..18 " "
      PLAIN@18..22
        TEXT@18..21 "qux"
        NEWLINE@21..22 "\n"
  BLANK_LINE@22..23
    BLANK_LINE@22..23 "\n"
  PARAGRAPH@23..37
    TEXT@23..27 "Quux"
    NEWLINE@27..28 "\n"
    TEXT@28..36 "2. corge"
    NEWLINE@36..37 "\n"
