crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_list_item_blank_line_inside.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..13
  LIST@0..13
    LIST_ITEM@0..13
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..6
        TEXT@2..5 "one"
        NEWLINE@5..6 "\n"
      BLANK_LINE@6..7
        BLANK_LINE@6..7 "\n"
      PLAIN@7..13
        TEXT@7..12 "  two"
        NEWLINE@12..13 "\n"
